swagger run properly
